--- a/report/СМО.tex
+++ b/report/СМО.tex
@@ -34,7 +34,7 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 \usepackage{listings}
 \usepackage{setspace}
 \usepackage{xcolor}
-
+\usepackage{enumitem}
 
 \usepackage{epstopdf}
 \usepackage{array}
@@ -125,7 +125,8 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 	\newpage
 	\tableofcontents
 	
-	\section{Постановка задачи}
+	\section*{\centering Постановка задачи}
+	\addcontentsline{toc}{section}{Постановка задачи}
 	
 	Целью курсовой работы является создание модели вычислительной системы (ВС) или ее части на некотором уровне детализации, описывающей и имитирующей ее структуру и функциональность.
 	
@@ -144,12 +145,15 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 	Последний тип моделей является предметом нашего изучения.
 	
 	Одним из подходов к построению имитационной модели является построение ее в виде системы массового обслуживания (СМО), с характерной для СМО терминологией: источник, буфер, прибор, диспетчер, заявка (требование).
+	\newpage
 	
-	\section{Исходные данные}
-	\begin{center}
-		\fontsize{18}{15}\selectfont
-		\textbf{Формализованная схема и описание СМО}
-		
+	\section*{\centering Исходные данные}
+	\addcontentsline{toc}{section}{Исходные данные}
+
+	\subsection*{\centering Формализованная схема и описание СМО}
+	\addcontentsline{toc}{subsection}{Формализованная схема и описание СМО}
+
+	\begin{center}	
 		\includegraphics[scale=0.5]{images/scheme.png}
 	\end{center}
 
@@ -208,23 +212,92 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 	\end{itemize}
 	\newpage
 	
-	\section{Пример временной диаграммы функционирования системы}
+	
+	\section*{\centering Пример временной диаграммы функционирования системы}
+	\addcontentsline{toc}{section}{Пример временной диаграммы функционирования системы}
+
+
 	\begin{center}
-		
 		\includegraphics[width=\textwidth]{images/waveform2.png}
 	\end{center}
+	\newpage
 	
-	\section{Обобщённая блок-схема}
+	\section*{\centering Обобщённая блок-схема}
+	\addcontentsline{toc}{section}{Обобщённая блок-схема}
+
 	
 	\begin{center}
-		
 		\includegraphics[width=\textwidth]{images/common_scheme.png}
 	\end{center}
+	\newpage
 	
-	\section{Модульная структура}
+	
+	\section*{\centering Пример технической системы,\\ удовлетворяющей формализованному описанию}
+	\addcontentsline{toc}{section}{Пример технической системы, \\ удовлетворяющей формализованному описанию}
+
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{|p{5cm}|p{10cm}|}
+			\hline
+			Техническая система&Система видеонаблюдения\\ \hline
+			Источники & Камеры видеонаблюдения, которые отправляют кадры только при обнаружении движения в кадре. Количество камер может варьироваться от 20 до 50 устройств.\\ \hline
+			Приборы & Приборами являются видеокарты, которые анализируют кадры (поиск лиц, трекинг объектов между несколькими камерами).\\ \hline
+			Буфер&Выделенная область оперативной памяти, в которую записываются поступающие кадры.\\ \hline
+			Дисциплина постановки в	буфер&Постановка на первое свободное место в буфере\\ \hline
+			Дисциплина выбора из буфера&LIFO - последние кадры обрабатываются первыми, так как они наиболее актуальны для текущего состояния системы.	\\ \hline
+			Дисциплина отказа&Самые старые кадры в видеопамяти перезаписываются при нехватке места.\\ \hline
+			Дисциплина постановки на обслуживание&Выбирается первая свободная видеокарта.\\ \hline
+		\end{tabular}
+	\end{table}
+	
+	\subsection*{\centering Ограничения и требуемые характеристики}
+	\addcontentsline{toc}{subsection}{Ограничения и требуемые характеристики}
+	
+	\begin{table}[H]
+		\centering
+		\begin{tabular}{|p{7cm}|p{5cm}|}
+			\hline
+			Количество камер & От 20 до 50\\ \hline
+			Размер заявки & 1Мб\\ \hline
+			Размер буфера & от 25Мб до 50Мб\\ \hline
+			Количество видеокарт & от 1 до 10\\ \hline
+			Среднее время между кадрами& $\lambda=1$с\\ \hline
+			Время обработки кадров& 350-500 мс\\
+			&150-220 мс\\
+			&50-90 мс\\
+			&40-60 мс	\\ \hline
+		\end{tabular}
+	\end{table}
+	
+	Вероятность отказа (пропуска кадров) должна составлять не более 10\%.\\ 
+	\indent Загрузка приборов более 90\% при максимально возможном числе камер.
+	
+	\begin{table}[H]
+		\centering
+		\caption*{Стоимость компонентов системы}
+		\begin{tabular}{|p{6cm}|p{7cm}|p{3cm}|}
+			\hline
+			Наименование & Время обслуживания заявки & Цена\\ \hline
+			NVIDIA GeForce GTX 1650 & 350-500 мс & 18 000 р.\\ \hline
+			NVIDIA GeForce RTX 3050 & 150-220 мс & 40 000 р.\\ \hline
+			NVIDIA GeForce RTX 4080 & 50-90 мс & 120 000 р.\\ \hline
+			NVIDIA RTX A4000 & 40-60 мс & 150 000 р.\\ \hline
+		\end{tabular}
+	\end{table}
+	
+	Поскольку число камер и размер кадров таковы, что память буфера значительно меньше оперативной памяти стандартного компьютера (современный ПК имеет от 4 Гб ОЗУ) на несколько порядков, то можем считать, что дополнительных затрат на память не будет. 
+	
+	Нам требуется найти самую дешёвую конфигурацию системы, которая будет удовлетворять всем требованиям при максимальной нагрузке т.е. при максимальном числе подключенных камер равном 50. Мы можем варьировать размер буфера и число камер, а также менять различные виды видеокарт. 	\\
+	\newpage
+	
+	
+	\section*{\centering Модульная структура}
+	\addcontentsline{toc}{section}{Модульная структура}
+
 	Разработка производилась в среде VisualStudio на языке С++ и среде VS Code на языке Python с использованием графической библиотеки Qt.
 	Приложение является объектно-ориентированным и содержит следующие классы: 
-	\begin{itemize}
+	\begin{itemize}[noitemsep]
 		\item Request~--- класс описывающий т пакет данных от датчика транспортного потока 
 		\item Event~--- класс описывающий тип события и время его наступления и заявку, с которой это событие связано
 		\item RequestSource~--- класс источника, который создаёт объекты заявок Request
@@ -233,11 +306,23 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 		\item UniformGenerator~--- класс генератора случайных чисел с равномерным распределением и в интервале $\left[a,b\right]$
 		\item PoissonGenerator~--- класс генератора случайных чисел с экспоненциальным распределением с параметром $\lambda$
 		\item QueueingSystem — класс реализующий интерфейс взаимодействия источников, приборов и буфера, а также сбор статистики 
-		\item TimeDiagramPanel — визуализирует временные диаграммы работы системы 
-		\item SimulationGUI — предоставляет интерфейс управления системой мониторинга
+		\item Набор классов MainWindow, Tab1Widget, Tab2Widget и другие, реализующие графический интерфейс приложения
 	\end{itemize}
+	\newpage
 	
-	Примеры работы в пошаговом режиме
+	\section*{\centering Описание работы программы}
+	\addcontentsline{toc}{section}{Описание работы программы}
+	
+	Графический интерфейс приложения содержит два основных окна: для пошагового моделирования и для моделирования  в автоматическом режиме.
+	
+	Оба окна содержат поля ввода всех основных параметров системы (число источников, число приборов, размер буфера, время моделирования, параметры времени обработки на приборе и интенсивности источников), а также набор кнопок для сохранения и сброса настроек, а также управления ходом моделирования.
+	
+	В нижней части окна пошагового моделирования содержатся блоки элементов системы (блок источников, блок ячеек буфера и блок приборов), которые отражают состояние системы на момент очередного события. 
+	\begin{itemize}
+		\item Источники содержат информацию о времени формирования следующей заявки.
+		\item Ячейки буфера содержат информацию о времени формирования хранимой заявки и номере прибора, от которого эта заявка поступила. Если ячейка буфера не содержит заявку, то указывается, что ячейка пуста.
+		\item Приборы содержат информацию о времени своего освобождения. Если прибор не обрабатывает заявку, то указывается, что он свободен. 
+	\end{itemize}
 	
 	\begin{center}
 		\includegraphics[width=\textwidth]{images/step0.png}
@@ -252,16 +337,18 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 		\includegraphics[width=\textwidth]{images/step3.png}
 	\end{center}
 	
-	Примеры работы в автоматическом режиме
+	В нижней части окна автоматического моделирования содержатся таблицы, содержащие расширенную статистику по отдельным источникам и приборам. Также над ними отдельно показывается общая статистика по числу заявок, загруженности приборов и вероятности отказов заявок.  
 	
 	\begin{center}
 		\includegraphics[width=\textwidth]{images/auto0.png}
 	\end{center}
 
 	\begin{center}
-		\includegraphics[width=\textwidth]{images/auto1.png}
+		\includegraphics[width=\textwidth]{images/auto4.png}
 	\end{center}
 	
+	
+	\iffalse
 	\section{Пример технической системы, удовлетворяющей формализованному описанию}
 	
 	\begin{table}[H]
@@ -315,20 +402,38 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 		\end{tabular}
 	\end{table}
 
-	Поскольку число камер и размер кадров таковы, что память буфера значительно меньше оперативной памяти стандартного компьютера (современный пк имеет от 4 Гб ОЗУ) более чем на порядок, то можем считать, что дополнительных затрат на память не будет. 
+	Поскольку число камер и размер кадров таковы, что память буфера значительно меньше оперативной памяти стандартного компьютера (современный ПК имеет от 4 Гб ОЗУ) более чем на порядок, то можем считать, что дополнительных затрат на память не будет. 
 	
 	Нам требуется найти самую дешёвую конфигурацию системы, которая будет удовлетворять всем требованиям при максимальной нагрузке т.е. при максимальном числе подключенных камер равном 50. Мы можем варьировать размер буфера и число камер, а также менять различные виды видеокарт. 	\\
+	\fi
+	\newpage
+	\section*{\centering Результаты работы имитационной модели}
+	\addcontentsline{toc}{section}{Результаты работы имитационной модели}
+	\subsection*{\centering  Определение количества реализаций}
+	\addcontentsline{toc}{subsection}{Определение количества реализаций}
 	
-	\section*{Результаты работы имитационной модели}
-	\subsection*{Определение количества реализаций}
+	Количество реализаций, необходимое для получения нужной точности при заданной доверительной вероятности, можно оценивать по формуле:
 	\begin{equation*}
-		N=\frac{t_{\alpha}^2(1-p)}{p\delta^2}=2429
+		N=\frac{t_{\alpha}^2(1-p)}{p\delta^2}=2429,
 	\end{equation*}
-	\fontsize{18}{15}\selectfont
-	\begin{center}
-		\textbf{ NVIDIA GeForce GTX 1650}
-	\end{center}
-	\normalsize
+	где:
+	\begin{itemize}
+		\item $p$~--- вероятность отказа в обслуживании заявки;
+		\item $t_{\alpha}=1.643$ для $\alpha=0.9$ (доверительная вероятность $90\%$);
+		\item $\delta=0.1$~--- относительная точность $(10\%)$.
+	\end{itemize}
+	
+	По результатам работы программы получено, что в большинстве случаев хватает около $10.000$ заявок для достижения нужной точности. Однако, в зависимости	от конфигурации, может потребоваться ощутимо большее количество заявок (до $25.000$).
+	
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width=\textwidth]{images/auto5.png}
+	\end{figure}
+
+	\subsection*{\centering  Анализ результатов, выводы и рекомендации по выбору конфигурации системы.}
+	\addcontentsline{toc}{subsection}{Анализ результатов, выводы и рекомендации по выбору конфигурации системы.}
+	\subsubsection*{\centering NVIDIA GeForce GTX 1650}
+	\addcontentsline{toc}{subsubsection}{NVIDIA GeForce GTX 1650}
 	
 	В случае с NVIDIA GeForce GTX 1650 мы можем отметить, что на всех конфигурациях она выдаёт максимально возможную или близкую к максимальной загрузку всех видеокарт, но при этом ни одна конфигурация не позволяет снизить вероятность отказа хотя бы до 50\% не говоря уже о целевых 10\%.
 	
@@ -348,13 +453,10 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 	\end{figure}
 	
 	
-	\fontsize{18}{15}\selectfont
-	\begin{center}
-		\textbf{NVIDIA GeForce RTX 3050}
-	\end{center}
-	\normalsize
-	
-	Для NVIDIA GeForce RTX 3050 можно найти несколько конфигураций которые будут удовлетворять всем необходимым условиям. Первый набор конфигураций состоит из 9 видеокарт и буфера размером от 5 до 25 заявок. Второй набор состоит из 10 видеокарт буфера размером от 8 до 25 заявок. Самой оптимальной будет конфигурация из 9 видеокарт и 5 местного буфера, однако при необходимости можно снизить вероятность отказа за счёт  
+	\subsubsection*{\centering NVIDIA GeForce RTX 3050}
+	\addcontentsline{toc}{subsubsection}{NVIDIA GeForce RTX 3050}
+
+	Для NVIDIA GeForce RTX 3050 можно найти несколько конфигураций которые будут удовлетворять всем необходимым условиям. Первый набор конфигураций состоит из 9 видеокарт и буфера размером от 5 до 25 заявок. Второй набор состоит из 10 видеокарт буфера размером от 8 до 25 заявок. Самой оптимальной будет конфигурация из 9 видеокарт и 5 местного буфера, однако при необходимости можно будет дополнительно снизить вероятность отказа за счёт добавления ещё одной видеокарты.   
 	
 	\begin{figure}[H]
 		\centering
@@ -370,13 +472,12 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 		\centering
 		\includegraphics[width=\textwidth]{images/3050_total.pdf}
 	\end{figure}
+
+
+	\subsubsection*{\centering NVIDIA GeForce RTX 4080}
+	\addcontentsline{toc}{subsubsection}{NVIDIA GeForce RTX 4080}
 	
-	\fontsize{18}{15}\selectfont
-	\begin{center}
-		\textbf{NVIDIA GeForce RTX 4080}
-	\end{center}
-	\normalsize
-	
+	В случае с NVIDIA GeForce RTX 4080 мы не можем найти баланс между загруженностью карт и вероятностью отказа. Если в системе меньше 4 видеокарт, то мы имеем высокую загрузку при высоком проценте отказов, а если 4 и более, то наоборот~--- загруженность становится менее $90\%$ и процент отказов становится менее $10\%$.
 	
 	\begin{figure}[H]
 		\centering
@@ -393,11 +494,11 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 		\includegraphics[width=\textwidth]{images/4080_total.pdf}
 	\end{figure}
 	
-	\fontsize{18}{15}\selectfont
-	\begin{center}
-		\textbf{NVIDIA RTX A4000}
-	\end{center}
-	\normalsize
+
+	\subsubsection*{\centering NVIDIA RTX A400}
+	\addcontentsline{toc}{subsubsection}{NVIDIA RTX A400}
+	
+	Для NVIDIA RTX A400 мы также не можем найти баланс между загруженностью карт и вероятностью отказа. Но если для NVIDIA GeForce RTX 4080 переход был между 3 и 4 видеокартами в системе, то теперь он находится между 2 и 3. Можно отметить, что проблема с более мощными NVIDIA GeForce RTX 4080 и NVIDIA RTX A400 состоит в том, что они дают слишком высокий прирост общей производительности системы при добавлении одной видеокарты, из-за чего не удаётся получить сбалансированные настройки для наших ограничений.
 		
 	\begin{figure}[H]
 		\centering
@@ -414,11 +515,18 @@ left=1.5cm, right=1.5cm, top=2cm, bottom=2cm, headsep=1cm, footskip=1cm]{geometr
 		\includegraphics[width=\textwidth]{images/A400_total.pdf}
 	\end{figure}
 	
-	Таким образом мы получили несколько вариантов конфигурации удовлетворяющих ограничениям. Все подходящие конфигурации используют NVIDIA GeForce RTX 3050. Самой оптимальной из подходящих является вариант с 9 видеокартами и 5 местами в буфере, однако можно добавить ещё одну видеокарту или увеличить число мест в буфере до максимальных 25 чтобы ещё сильнее уменьшить вероятность отказа оставаясь в рамках необходимой загрузки. Остальные видеокарты в каждой конфигурации не могут удовлетворить хотя бы одному параметру. 
-	
-	\section{Вывод}
+	Таким образом мы получили несколько вариантов конфигурации удовлетворяющих ограничениям. Все подходящие конфигурации используют NVIDIA GeForce RTX 3050. Самой оптимальной из подходящих является вариант с 9 видеокартами и 5 местами в буфере, однако можно добавить ещё одну видеокарту или увеличить число мест в буфере до максимальных 25 чтобы ещё сильнее уменьшить вероятность отказа оставаясь в рамках необходимой загрузки. Остальные видеокарты в любой конфигурации не могут удовлетворить хотя бы одному параметру. 
+	\newpage
+	\section*{\centering Вывод}
+	\addcontentsline{toc}{section}{Вывод}
+
 	В ходе курсовой работы была написана имитационная модель системы массового обслуживания на языке C++, а также реализован графический интерфейс для неё на языке Python с использованием графической библиотеки Qt. С помощью данной программы была проанализирована реальная система видеонаблюдения и подобрана максимально выгодная комплектация системы, удовлетворяющая поставленным требованиям.
-	
-	\section{Список литературы}
-	
+	\newpage
+	\section*{\centering Список литературы}
+	\addcontentsline{toc}{section}{Список литературы}
+	\begin{enumerate}
+		\item Гмурман В.Е. Теория вероятностей и математическая статистика : учеб. пособие для вузов В. Е. Гмурман .— 12-е изд., перераб. — М. : Юрайт, 2010 .— 478 с.
+		\item Бусленко Н.П. Моделирование сложных систем. М.: Наука, 1978
+		\item Александрова О.В., Котляров В.П. Архитектура вычислительных систем. Методические указания для курсового проектирования. СПбПУ, 2018г. — 73 с.
+	\end{enumerate}
 \end{document}
